data/all_generated_tests/raw_wast_tests/call_indirect_IncorrectConditionEvaluation_4353.wast
;; 2. **Test Description**: Use a `call_indirect` to invoke a function with multiple parameters and add a `br_if` after setting a parameter through the call that conditionally branches based on an equality check.      **Specific Constraint**: Properly consuming and evaluating multiple operands from the stack.      **Incorrect Condition Evaluation**: Verify if `br_if` fails to correctly interpret the equality of parameters.

(assert_invalid
  (module
    (type (func (param i32 i32) (result i32)))
    (table 1 funcref)
    (elem (i32.const 0) $func)
    (func $func (param i32 i32) (result i32)
      local.get 0
      local.get 1
      i32.add
    )
    (func (param) (result)
      (call_indirect (type 0) (i32.const 0) (i32.const 2) (i32.const 1))
      br_if 0 (i32.eqz (i32.const 1))
    )
  )
  "type mismatch"
)